[tool.poetry]
name = "geofencing"
version = "0.1.0"
description = ""
authors = ["ASX <mragungsetiaji@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9, <3.10"
scikit-learn = "^1.1.1"
Flask = "^2.1.3"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
